@@ -97,6 +97,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #7502: Fix equality comparison for DocTestCase instances.  Patch by
+  Cédric Krier.
+
 - Issue #8035: urllib: Fix a bug where the client could remain stuck after a
   redirection or an error.
 
